# OOADLibraryManagement

./: .gitignore  README.md  dbHelper.py  gunicorn.config.py  lint_and_format.sh  log.ini  main.py  pylintrc  pyproject.toml  sql.sql
.github/workflows/: ci.yml
api/: book.py  record.py  user.py
config/: __init__.py  app.cfg  config.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/pages/: LandingPage.jsx  NavBar.jsx  NoMatch.jsx  bookinfo.jsx  borrow.jsx  dashboard.jsx  edituser.jsx  login.jsx  profile.jsx  register.jsx  table.jsx
models/: book.py  record.py  user.py
