[tool.poetry]
name = "ooad-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.29.0"
requests = "^2.31.0"
black = "^24.4.0"
isort = "^5.13.2"
pylint = "^3.1.0"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
